<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Random Contact</string>
    <string name="app_version">Version 2.3.0 (Jan 2016)</string>
    <string name="app_desc">This app displays a ""Random Contact"" from your contacts list. Contact an old friend today!</string>
    <string name="app_disclaimer">The data displayed in this app are not guaranteed and should be used as an indication. All the data are retrieved from the phone\'s database.</string>
    <string name="app_developer_info">Designed and developed at ae labs, with material design principles</string>
    
    <string name="empty_text"></string>
    <string name="empty_set">This contact does not have any phone numbers.</string>
    
    <string name="github_source_url" translatable="false">https://github.com/midhunhk/random-contact</string>
    <string name="github_source_visible_url" translatable="false">github.com/midhunhk/random-contact</string>

    <!-- menu options -->
    <string name="action_settings">Settings</string>

    <!-- Actions -->
    <string name="action_refresh">Refresh</string>
    <string name="action_prev">Previous</string>
    <string name="action_about">About</string>
    <string name="action_call">Call</string>
    <string name="action_license">View License</string>
    <string name="action_message">Text</string>
    <string name="action_view_contact">View in Address Book</string>

    <string name="str_times_contacted">Times Contacted</string>
    <string name="str_contact_count">0</string>
    <string name="str_empty_contact_list">Contacts list is empty</string>
    <string name="str_last_contcted_on">Last contacted on</string>
    <string name="str_contact_now">CONTACT NOW</string>
    <string name="str_top_contacted">Top frequently contacted</string>
    
    <string name="str_license">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n
http://www.apache.org/licenses/LICENSE-2.0\n\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>

</resources>