<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:padding="@dimen/card_padding" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_padding" >

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="start"
                android:layout_margin="4dip"
                android:contentDescription="@string/empty_text"
                android:padding="@dimen/card_padding"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_toRightOf="@+id/appIcon"
                android:padding="@dimen/card_padding"
                android:text="@string/app_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/appDeveloper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appVersion"
                android:layout_gravity="start"
                android:layout_toRightOf="@+id/appIcon"
                android:padding="@dimen/card_padding"
                android:text="@string/app_version" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appDeveloper"
                android:layout_gravity="start"
                android:layout_toRightOf="@+id/appIcon"
                android:padding="@dimen/card_padding"
                android:text="@string/app_developer_info" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:padding="@dimen/card_padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_padding" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:padding="@dimen/card_padding"
                android:text="@string/app_desc" />

            <Button
                android:id="@+id/viewLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/padding_small"
                android:text="@string/action_license"
                android:textAllCaps="false" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>