<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:background="@color/white"
        android:padding="@dimen/card_padding" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/material_blue_grey_950"
                android:minHeight="50dp"
                app:theme="@style/Theme.AppCompat" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="90dp"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/card_padding" >

                    <com.ae.apps.common.views.RoundedImageView
                        android:id="@+id/userProfileImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/icon_margin"
                        android:contentDescription="@string/empty_text"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/userDisplayName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/empty_text"
                        android:textColor="@color/almost_white"
                        android:textSize="24sp" />
                </LinearLayout>
            </android.support.v7.widget.Toolbar>

            <!-- Contacted Count -->

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/card_margin" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentStart="false"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/card_margin"
                    android:gravity="center"
                    android:text="@string/str_times_contacted"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userContactedCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/card_padding"
                    android:text="@string/str_contact_count"
                    android:textColor="@color/bright_orange"
                    android:textSize="48sp" />
            </RelativeLayout>
            <!-- last contacted count -->


            <!-- List View Container -->

            <LinearLayout
                android:id="@+id/listContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_margin" >

                <LinearLayout
                    android:id="@+id/lastContactedLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/card_margin"
                    android:paddingRight="@dimen/card_margin" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingEnd="@dimen/card_margin"
                        android:paddingRight="@dimen/card_margin"
                        android:text="@string/str_last_contcted_on" />

                    <TextView
                        android:id="@+id/lastContactedTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/empty_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/contactNowText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:padding="@dimen/card_padding"
                    android:text="@string/str_contact_now"
                    android:textColor="@color/bright_orange"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@android:id/list"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/card_margin" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>